PSXIntegration/openshift/staging1/dc/wso2-psx-integration.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: wso2-psx-integration
  namespace: staging1
  labels:
    app: wso2-psx-integration
    environment: staging1
    component: esb
    service: wso2-psx-integration
spec:
  replicas: 1
  template:
    metadata:
        labels:
          app: wso2-psx-integration
          environment: staging1
          component: esb
          service: wso2-psx-integration
    spec:
      containers:
        - image: registry.elkor.lv/kt-team/esb/wso2-psx-integration:latest
          imagePullPolicy: Always
          name: psx-integration
          resources:
              requests:
                  memory: 100Mi
      imagePullSecrets:
          -   name: regcred
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: wso2-psx-integration
  namespace: staging1
spec:
  ports:
    - port: 8290
      protocol: TCP
      targetPort: 8290
  selector:
    app: wso2-psx-integration
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: "1800s"
  name: wso2-psx-integration
  namespace: staging1
spec:
  host: importstaging1.elkor.lv
  path: /api/psx
  to:
    kind: Service
    name: wso2-psx-integration
    weight: 100
  wildcardPolicy: None
